# unified-genomics-pipeline

./: .gitignore  README.md  pyproject.toml
auth/: federated.py  ga4gh_passport.py
drs/: resolution.py
infra/templates/: tesk_job_template.yaml
pipelines/: archive_genome.sh  embarrassingly_fasta.nf  run_fastvep.sh  run_giraffe_alignment.sh  run_gwas.sh  variant_calling.wdl
rust/src/: bam_reader.rs
server/: flight_server.py
single_cell/: dask_orchestration.py  foundation_model.py  gpu_analysis.py
storage/: cloud_access.py  encryption.py
tests/: conftest.py
tests/integration/: test_drs_integration.py
tests/unit/: test_auth.py  test_drs.py  test_pipelines.py  test_server.py  test_single_cell.py  test_storage.py  test_variants.py
variants/: analysis.py  annotation.py
visualization/: clinical_drs_dashboard.jsx  clinical_visualization.rs
